manifest/objects/LVGO__Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Account_Abbreviation__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>Document if the client has an abbreviation they prefer to use (Ex: Donnelly Financial Solutions goes by DFIN)</inlineHelpText>
        <label>Account Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Account__c</fullName>
        <label>Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>LVGO_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LVGO__Adjusted_Annual_Renewal_Value_Enrolled__c</fullName>
        <formula>IF 
( ISPICKVAL(LVGO__Type__c,&quot;Renewal&quot;),
(LVGO__Livongo_for_Diabetes_PwDs__c * LVGO__Livongo_for_Diabetes_PPPM__c *12) 
+ 
(LVGO__Livongo_for_Hypertension_PwHs__c * LVGO__Livongo_for_Hypertension_PPPM__c * 12)
+
(LVGO__Livongo_DPP_PwPDs__c * LVGO__Livongo_DPP_PPPM__c * 12) 
+ 
( LVGO__Livongo_for_Weight_Management_DP_PwOs__c * LVGO__Livongo_for_Weight_Management_DP_PPPM__c * 12), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Annual Renewal Value (Enrolled)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Alternative_Contract_Path__c</fullName>
        <description>Only filled out if Client Proposal Preference is &quot;Alternative Contract Path is preferred&quot;</description>
        <inlineHelpText>Only filled out if Client Proposal Preference is &quot;Alternative Contract Path is preferred&quot;</inlineHelpText>
        <label>Alternative Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__Client_Proposal_Preference__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accolade</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BCBS KC</fullName>
                </value>
                <value>
                    <fullName>BCBS Mass</fullName>
                </value>
                <value>
                    <fullName>BCBS Michigan</fullName>
                </value>
                <value>
                    <fullName>BCBS State of RI</fullName>
                </value>
                <value>
                    <fullName>BCBS TN</fullName>
                </value>
                <value>
                    <fullName>Cambia - Regence</fullName>
                </value>
                <value>
                    <fullName>CapitalRx</fullName>
                </value>
                <value>
                    <fullName>Castlight</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>HAP</fullName>
                </value>
                <value>
                    <fullName>HCSC</fullName>
                </value>
                <value>
                    <fullName>Healthcomp Administrators</fullName>
                </value>
                <value>
                    <fullName>HealthNow</fullName>
                </value>
                <value>
                    <fullName>HealthSCOPE</fullName>
                </value>
                <value>
                    <fullName>Highmark</fullName>
                </value>
                <value>
                    <fullName>Independence Blue Cross</fullName>
                </value>
                <value>
                    <fullName>Meritain Health</fullName>
                </value>
                <value>
                    <fullName>Molina Medicaid</fullName>
                </value>
                <value>
                    <fullName>Premera</fullName>
                </value>
                <value>
                    <fullName>Trustmark</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>Virgin Pulse</fullName>
                </value>
                <value>
                    <fullName>Vitality</fullName>
                </value>
                <value>
                    <fullName>WellSpark</fullName>
                </value>
                <value>
                    <fullName>Welltok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Amendment_to_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment to Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_ED_Cost_Savings__c</fullName>
        <formula>2014.048125* LVGO__Annual_Number_of_ED_Visits_Avoided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual ED Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Heart_Attack_Cost_Savings__c</fullName>
        <formula>(79842.7285183994) * LVGO__Annual_Heart_Attacks_Avoided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Heart Attack Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Heart_Attacks_Avoided__c</fullName>
        <formula>(LVGO__Estimated_Enrolled_HTN_Population__c ) * (3.67/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Heart Attacks Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Number_of_ED_Visits_Avoided__c</fullName>
        <formula>LVGO__Estimated_Enrolled_HTN_Population__c * ((433 *0.236 *0.5)/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Number of ED Visits Avoided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Office_Visit_Savings__c</fullName>
        <formula>( LVGO__Livongo_for_Hypertension_PwHs__c * 0.2)*220</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Office Visit Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Renewal_Deal_Value__c</fullName>
        <formula>((LVGO__Livongo_for_Diabetes_PwDs__c *  LVGO__Livongo_for_Diabetes_PPPM__c )* 12) + (( LVGO__Livongo_for_Hypertension_PwHs__c *  LVGO__Livongo_for_Hypertension_PPPM__c )*12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Renewal Deal Value calculated as follows: (Quantity * PPPM) *12</inlineHelpText>
        <label>Annual Renewal Deal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Stroke_Cost_Savings__c</fullName>
        <formula>(54007.6391672994) *  LVGO__Annual_Strokes_Avoided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Stroke Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Annual_Strokes_Avoided__c</fullName>
        <formula>LVGO__Estimated_Enrolled_HTN_Population__c * (1.47/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Strokes Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__BAA__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>BAA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Benefit_Consultant_Involved_in_Deal__c</fullName>
        <label>Benefit Consultant Involved in Deal?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <label>No Involvement</label>
                </value>
                <value>
                    <fullName>Consultant introduced us, but was not involved in selling</fullName>
                    <label>Yes - Consultant introduced us, but was not involved in selling</label>
                </value>
                <value>
                    <fullName>Consultant introduced us, and was involved in selling</fullName>
                    <label>Yes - Consultant introduced us, and was involved in selling</label>
                </value>
                <value>
                    <fullName>Consultant did not introduce us, but was involved in selling</fullName>
                    <label>Yes - Consultant did not introduce us, but was involved in selling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__BillingPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales will populate this field during the sales cycle with initial ideas around the Billing Partner for a deal.  Once a deal goes into contracting, the official Billing Partner is established as a relationship in the Relationship table.</description>
        <inlineHelpText>Sales will populate this field during the sales cycle with initial ideas around the Billing Partner for a deal.  Once a deal goes into contracting, the official Billing Partner is established as a relationship in the Relationship table.</inlineHelpText>
        <label>Pre-Contracting Billing Partner</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Opportunities (Billing_Partner__c)</relationshipLabel>
        <relationshipName>LVGO_Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Billing_Method__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct to Employer</fullName>
                </value>
                <value>
                    <fullName>Direct to TPA/ASO</fullName>
                    <label>Direct to Plan/TPA</label>
                </value>
                <value>
                    <fullName>Medical Claims TPA/ASO</fullName>
                    <label>Claims to Plan/TPA</label>
                </value>
                <value>
                    <fullName>Direct Through Partner</fullName>
                    <label>Direct Through Other Partner</label>
                </value>
                <value>
                    <fullName>Through PBM</fullName>
                </value>
                <value>
                    <fullName>Through Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Box_Contract_URL__c</fullName>
        <label>Box Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LVGO__Broker_Count__c</fullName>
        <inlineHelpText>Roll up Helper - count of Brokers Related Contacts</inlineHelpText>
        <label>Broker Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Business_Unit__c</fullName>
        <formula>CASE( TEXT(LVGO__Sub_Channel__c),
&quot;Employer - Downmarket&quot;, &quot;Employer&quot;,
&quot;Employer - East Client Sales&quot;, &quot;Employer&quot;,
&quot;Employer - East Net New&quot;, &quot;Employer&quot;,
&quot;Employer - Signature&quot;, &quot;Employer&quot;,
&quot;Employer - West Client Sales&quot;, &quot;Employer&quot;,
&quot;Employer - West Net New&quot;, &quot;Employer&quot;,
&quot;HSG - Aetna&quot;, &quot;HSG&quot;,
&quot;HSG - Federal&quot;, &quot;HSG&quot;,
&quot;HSG - United&quot;, &quot;HSG&quot;,
&quot;HSG - TPA/Reseller&quot;, &quot;HSG&quot;,
&quot;DTE - East New&quot;, &quot;Employer&quot;,
&quot;DTE - East Client Sales&quot;, &quot;Employer&quot;,
&quot;DTE - West New&quot;, &quot;Employer&quot;,
&quot;DTE - West Client Sales&quot;, &quot;Employer&quot;,
&quot;DTE - Signature&quot;, &quot;Employer&quot;,
&quot;DTE - Broker&quot;, &quot;Employer&quot;,
&quot;Employer - Labor&quot;, &quot;Employer&quot;,
&quot;Employer&quot;, &quot;Employer&quot;,
&quot;Employer - ASO&quot;, &quot;Employer&quot;,
&quot;Canada&quot;, &quot;International&quot;,
&quot;HHS&quot;, &quot;HHS&quot;,
&quot;HP - US Existing&quot;, &quot;HP&quot;,
&quot;HP - US New&quot;, &quot;HP&quot;,
&quot;HP - Government Federal&quot;, &quot;HSG&quot;,
&quot;HP - National&quot;, &quot;HP&quot;,
&quot;HP - Aetna&quot;, &quot;HSG&quot;,
&quot;HP - United&quot;, &quot;HSG&quot;,
&quot;HP - TPA/Reseller&quot;, &quot;HSG&quot;,
&quot;HSG - Blues&quot;, &quot;HSG&quot;,
&quot;HSG - East&quot;, &quot;HSG&quot;,
&quot;HSG - West&quot;, &quot;HSG&quot;,
&quot;HSG - Strategic Partnerships&quot;, &quot;HSG&quot;,
&quot;HSG&quot;, &quot;HSG&quot;,
&quot;Undefined&quot;, &quot;Undefined&quot;,
&quot;International&quot;, &quot;International&quot;,
&quot;HSG - Aetna&quot;, &quot;HSG&quot;,
&quot;HSG - Federal&quot;, &quot;HSG&quot;,
&quot;Employer - Net New&quot;, &quot;Employer&quot;,
&quot;Employer - UHC Employees&quot;, &quot;Employer&quot;,
&quot;HSG - ASO&quot;, &quot;HSG&quot;,
&quot;HSG - National&quot;, &quot;HSG&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Bypass_Contact_Role_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only editable by Contract Ops</description>
        <inlineHelpText>Only editable by Contract Ops</inlineHelpText>
        <label>Bypass Contact Role Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Bypass_Product_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required for the &quot;Manage Opportunity Programs&quot; flow that updates Price Book and Opp Programs.</description>
        <label>Bypass Product Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__CCS__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>CCS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__CIM_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIM Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__CIM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client Implementation MAnager</description>
        <label>Client Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__CPQ_Price_Book__c</fullName>
        <label>CPQ Price Book</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Calculated_Forecasted_Amount__c</fullName>
        <label>Calculated Forecasted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__CampaignId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CampaignId</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>LVGO_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CampaignId</label>
        <referenceTo>LVGO__Campaign__c</referenceTo>
        <relationshipName>LVGO_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Channel__c</fullName>
        <formula>CASE( TEXT(LVGO__Sub_Channel__c),
&quot;Employer - Downmarket&quot;, &quot;Employer - Downmarket&quot;,
&quot;Employer - East Client Sales&quot;, &quot;Employer - Client Sales&quot;,
&quot;Employer - East Net New&quot;, &quot;Employer - Net New&quot;,
&quot;Employer - Signature&quot;, &quot;Employer - Signature&quot;,
&quot;Employer - West Client Sales&quot;, &quot;Employer - Client Sales&quot;,
&quot;Employer - West Net New&quot;, &quot;Employer - Net New&quot;,
&quot;HSG - Aetna&quot;, &quot;HSG - Aetna&quot;,
&quot;HSG - Federal&quot;, &quot;HSG - Federal&quot;,
&quot;HSG - TPA/Reseller&quot;, &quot;HSG - TPA/Reseller&quot;,
&quot;HSG - United&quot;, &quot;HSG - United&quot;,
&quot;DTE - East New&quot;, &quot;Employer - Net New&quot;,
&quot;DTE - East Client Sales&quot;, &quot;Employer - Client Sales&quot;,
&quot;DTE - West New&quot;, &quot; Employer - Net New&quot;,
&quot;DTE - West Client Sales&quot;, &quot;Employer - Client Sales&quot;,
&quot;DTE - Signature&quot;, &quot;Employer - Signature&quot;,
&quot;DTE - Broker&quot;, &quot;Employer - Downmarket&quot;,
&quot;Employer - Labor&quot;, &quot;Employer - Labor&quot;,
&quot;Employer&quot;, &quot;Employer&quot;,
&quot;Employer - ASO&quot;, &quot;Employer - ASO&quot;,
&quot;Canada&quot;, &quot;International&quot;,
&quot;HHS&quot;, &quot;HHS&quot;,
&quot;HP - US Existing&quot;, &quot;HP - US Group Health&quot;,
&quot;HP - US New&quot;, &quot;HP - US Group Health&quot;,
&quot;HP - Government Federal&quot;, &quot;HSG - Aetna/Federal&quot;,
&quot;HP - National&quot;, &quot;HP - National&quot;,
&quot;HP - Aetna&quot;, &quot;HSG - Aetna/Federal&quot;,
&quot;HP - United&quot;, &quot;HSG - United&quot;,
&quot;HP - TPA/Reseller&quot;, &quot;HSG - TPA/Reseller&quot;,
&quot;HSG - Blues&quot;, &quot;HSG - Blues&quot;,
&quot;HSG - East&quot;, &quot;HSG - East&quot;,
&quot;HSG - West&quot;, &quot;HSG - West&quot;,
&quot;HSG - Strategic Partnerships&quot;, &quot;HSG - Strategic Partnerships&quot;,
&quot;HSG&quot;, &quot;HSG&quot;,
&quot;Employer - Net New&quot;, &quot;Employer - Net New&quot;,
&quot;Employer - UHC Employees&quot;, &quot;Employer - UHC Employees&quot;,
&quot;HSG - ASO&quot;, &quot;HSG - ASO&quot;,
&quot;HSG - National&quot;, &quot;HSG - National&quot;,
&quot;Undefined&quot;, &quot;Undefined&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Client_Proposal_Preference__c</fullName>
        <description>To be used only if Account Grouping is Current CVS TDC/Aetna Clients</description>
        <inlineHelpText>To be used only if Account Grouping is Current CVS TDC/Aetna Clients</inlineHelpText>
        <label>CVS/Aetna Client Proposal Preference</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__StageName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed all options, no preference</fullName>
                </value>
                <value>
                    <fullName>Direct Agreement is preferred</fullName>
                </value>
                <value>
                    <fullName>TDC Renewal is preferred</fullName>
                </value>
                <value>
                    <fullName>Alternative Contract Path is preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Client_Specific_Language_Nuances__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>Document if the client uses any specific lanugage nuances (Ex: Walmart calls employees associates)</inlineHelpText>
        <label>Client Specific Language Nuances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Combined_Total__c</fullName>
        <label>Combined TD/LV Solution (MH) Total Price</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Program_ARR_Copy__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__Program_Rev_Synergy_Flag__c</field>
            <operation>equals</operation>
            <value>Combined TD/LV Solution (MH)</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Commission_Notes__c</fullName>
        <label>Commission Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Config_Notes__c</fullName>
        <label>Config Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Configuration_Team_Status__c</fullName>
        <label>Configuration Team Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No Config Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__ContractOps_Notes__c</fullName>
        <label>ContractOps Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__ContractOps_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractOps Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__ContractOps_Stage__c</fullName>
        <label>ContractOps Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Data Capture Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__ContractOps_Status__c</fullName>
        <label>ContractOps Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Config Action Needed</fullName>
                </value>
                <value>
                    <fullName>ConOps Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Billing_Method__c</fullName>
        <formula>Text(LVGO__Contract__r.LVGO__Billing_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Billing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Data_Entry_Owner__c</fullName>
        <formula>LVGO__Contract__r.LVGO__Contract_Data_Entry_Owner__r.FirstName + &apos; &apos; + LVGO__Contract__r.LVGO__Contract_Data_Entry_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Data Entry Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Nuances__c</fullName>
        <description>Text field to describe report needs or contractual requirements (SLAs/PGs/ROIs) that are still in negotiation</description>
        <inlineHelpText>Use this text box to describe any non-standard agreements in detail for the CI to reference.</inlineHelpText>
        <label>Contract Nuances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Number_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; LVGO__Contract__r.Id, LVGO__Contract__r.LVGO__ContractNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct contracts, please select &quot;Livongo&quot;. Indicates the Contract Path for the Opportunity, and required for Opps to be closed won. Once an Opp is won, the Contract Path will be represented as a relationship associated to the Client Overview.</description>
        <inlineHelpText>Direct contracts, please select &quot;Livongo&quot;. Indicates the Contract Path for the Opportunity, and required for Opps to be closed won. Once an Opp is won, the Contract Path will be represented as a relationship associated to the Client Overview.</inlineHelpText>
        <label>Contract Path</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Contract Path must be a Partner Account.</errorMessage>
            <filterItems>
                <field>$Source.LVGO__Source__c</field>
                <operation>equals</operation>
                <value>TD</value>
            </filterItems>
            <infoMessage>Contract Path must be a Partner Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Opportunities (Contract Path)</relationshipLabel>
        <relationshipName>LVGO_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Path_from_Contract__c</fullName>
        <formula>LVGO__Contract__r.LVGO__Contract_Path_Deprecated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Path (from Contract)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract_Status__c</fullName>
        <inlineHelpText>Has a contract been requested or delivered yet?</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Redlining</fullName>
                </value>
                <value>
                    <fullName>Waiting on Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>LVGO__Contract__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>LVGO_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Cost_Savings_83_PPPM_Annual__c</fullName>
        <formula>((( LVGO__Livongo_for_Diabetes_PwDs__c  * 131) * 0.35) * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Savings 83 PPPM_Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Cost_Savings_83_PPPM_Monthly__c</fullName>
        <formula>(LVGO__Livongo_for_Diabetes_PwDs__c * 131) * 0.35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$131 PPPM cost-savings multiplied by 35% projected enrollment</inlineHelpText>
        <label>Cost Savings 83 PPPM_Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Cost_of_diabetes_testing_supplies__c</fullName>
        <label>Cost of diabetes testing supplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Covered_Lives__c</fullName>
        <formula>LVGO__Account__r.LVGO__Covered_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Cross_Sell_LV_Total__c</fullName>
        <label>Cross-Sell LV into TD Total Price</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Program_ARR_Copy__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__Program_Rev_Synergy_Flag__c</field>
            <operation>equals</operation>
            <value>Cross-sell LV Products into TD</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Cross_Sell_LV_to_HHS__c</fullName>
        <label>Cross-Sell LV to HHS</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Program_ARR_Copy__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__Program_Rev_Synergy_Flag__c</field>
            <operation>equals</operation>
            <value>Cross-sell LV to HHS</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Cross_Sell_TD_Total__c</fullName>
        <label>Cross-Sell TD into LV Total Price</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Program_ARR_Copy__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__OpportunityLineItem__c.LVGO__Program_Rev_Synergy_Flag__c</field>
            <operation>equals</operation>
            <value>Cross-sell TD Products into LV</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__CurrentUser_CIM__c</fullName>
        <formula>IF(  LVGO__CIM__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CIM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__CurrentUser_CSM__c</fullName>
        <formula>IF(LVGO__CSM__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CSM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Custom_Billing_Nuances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>If there is a non-standard billing agreement, check this box (examples: claims based billing, milestones based billing)</inlineHelpText>
        <label>Custom Billing Nuances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Custom_Data_Exchange_Nuances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>If there is a non-standard data exchange agreement, check this box (examples: unique or agreed upon reporting)</inlineHelpText>
        <label>Custom Data Exchange Nuances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Custom_Enrollment_Nuances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>If there is a non-standard enrollment agreement, check this box (examples: program level eligibility, targetted marketing for Tier 3 clients)</inlineHelpText>
        <label>Custom Enrollment Nuances</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>